# CxxVscodeTemplate

./: CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
include/: hello.hpp
src/: CMakeLists.txt  app_bt.cpp  app_main.cpp  hello.cpp
test/: CMakeLists.txt  g_test.cpp
